--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@
     height: 0;
     top: 0;
     left: 0;
-    background: var(--primary);
+    background: #1F4393;
     opacity: 0;
     transition: .5s;
 }
@@ -300,7 +300,7 @@
     align-items: center;
     justify-content: center;
     color: var(--dark);
-    border: 2px solid var(--primary);
+    border: 2px solid #1F4393;
     border-radius: 50px;
     font-size: 18px;
     transition: .5s;
@@ -309,7 +309,7 @@
 .testimonial-carousel .owl-nav .owl-prev:hover,
 .testimonial-carousel .owl-nav .owl-next:hover {
     color: #FFFFFF;
-    background: var(--primary);
+    background: #1F4393;
 }
 
 
@@ -355,7 +355,7 @@
 }
 
 .footer .copyright a:hover {
-    color: var(--primary);
+    color: #1F4393;
 }
 
 /* Custom style */
@@ -377,4 +377,21 @@
 
 .custom-headline{
   font-size: 45px;  
+}
+
+.custom-bg{
+    background-color: #1F4393;
+}
+
+.custom-border-start{
+    border-left: 5px solid #1F4393 !important;
+}
+
+.custom-text{
+    color:#1F4393;
+}
+
+.form-control:focus{
+    border: #1F4393 !important;
+    box-shadow: 0 0 0 0.25rem #fff;
 }
